# Agent_Alpaca_Generation

./: .env.example  CLEANUP_RECOMMENDATIONS.md  DEPENDENCY_RESOLUTION_SUMMARY.md  GRAPHRAG_SETUP_GUIDE.md  LLM_FAILURE_FIX_SUMMARY.md  OLLAMA_ONLY_SETUP.md  README.md  SETUP_GUIDE.md  WORKFLOW_TROUBLESHOOTING_SUMMARY.md  docker-compose.yml  local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options.code-workspace  pyproject.toml  run_test.py  start_server.bat  start_server.py  test_crewai_fix.py  test_litellm_fix.py  test_ollama_only.py  test_ollama_workflow.py  test_workflow_fix.py  test_workflow_integration.py
backend/: __init__.py  alpaca_generator.py  app.py  cleanup_manager.py  enhanced_alpaca_generator.py  enhanced_document_manager.py  enhanced_status_tracker.py  entity_extraction_crew.py  graph_rag_system.py  improved_alpaca_generator.py  json_parser_fix.py  llm_manager.py  llm_performance_scores.json  llm_shootout_manager.py  manager_agent.py  manager_scoring_system.py  message_validator.py  models.py  neo4j_manager.py  rag_system.py  requirements.txt  safe_llm_wrapper.py  token_counter.py  troubleshooting.py  websocket_manager.py  workflow_manager.py
config/: llms.yaml
db/: chroma.sqlite3
frontend/: index.html  llm_shootout.html  script.js  styles.css
knowledge/: Stanford_Alpaca_CrewAI_Workflow_Guide.md
results/: 17935461-23de-449c-82ad-d596758a051e.json  3601a18f-0349-47f1-b616-2777c3505021.json  52380b96-ba80-4e2c-bd01-02a355b47ee7.json  678e2436-7d3f-4271-93ca-6d84c1a234d8.json  6d7c73de-1a58-43bd-b0fe-b09fc8636f73.json  7d700a78-6e37-4cf8-b777-d2c7c0c0dda5.json  a3653b87-84fe-4e63-a41e-750c0913c5a1.json  a9680d33-feeb-496c-bfac-40e5b3699c0d.json  d8c780b4-c789-4ad1-8040-a9368717dfbd.json  db1e00b4-b25d-40ee-a565-a2f07e074808.json
troubleshooting/: README.md
uploads/: doc_15b03fcd-cdb0-4ebd-bdb8-e02249ea5217.json  doc_2ea42844-e7b7-4407-b9db-62915a8bc662.json  doc_667353eb-202a-432f-9d82-4d32c340e68f.json  doc_7063c272-5050-4709-b101-f35f9a9c6b88.json  doc_820961b3-dd7e-4cac-b16f-d55e5d84d5dd.json  doc_9610412e-81c5-4646-b844-3cf11b2c9906.json  doc_99ec4db9-e4a7-4b65-b347-d797e4bf2217.json  doc_a8c25752-471d-4db6-86d9-34d8004f0d8c.json  doc_bce500d0-4936-42c2-83ab-16e7b299ef18.json  doc_c9b2d31a-d5cf-47ec-a2e2-f392022a4ca6.json  doc_d63f4073-f4a9-4ba1-9fbf-67e068a16934.json
(+55 files in other folders)
