[project]
name = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options"
version = "0.1.0"
description = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "crewai-tools>=0.12.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "websockets==12.0",
    "aiohttp>=3.10.0",
    "openai>=1.40.0",
    "pydantic>=2.8.0",
    "psutil==5.9.6",
    "GPUtil==1.4.0",
    "python-dotenv==1.0.0"
]

[project.scripts]
local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options.main:run"
run_crew = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options.main:run"
train = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options.main:train"
replay = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options.main:replay"
test = "local_crewai_workflow_for_synthetic_data_with_rag_and_llm_options.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
